WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304077
[threaded-animations] many `css-view-transitions` WPT tests crash with "Threaded Time-based Animations" enabled
https://bugs.webkit.org/show_bug.cgi?id=304077
Summary
[threaded-animations] many `css-view-transitions` WPT tests crash with "Threa...
Antoine Quint
Reported
2025-12-12 09:40:14 PST
Many WPT tests for `css-view-transitions` crash in debug builds due to hitting `ASSERT(values.size() > 1)` in `AcceleratedEffect::validateFilters()`.
Attachments
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2025-12-12 09:53:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55317
EWS
Comment 2
2025-12-12 12:23:20 PST
Committed
304377@main
(2a9dd7654370): <
https://commits.webkit.org/304377@main
> Reviewed commits have been landed. Closing PR #55317 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-12-12 12:24:12 PST
<
rdar://problem/166404882
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug