Source/WebCore/platform/animation/AcceleratedEffect.cpp
@@ -462,6 +462,7 @@ void AcceleratedEffect::validateFilters(const AcceleratedEffectValues& baseValue
     auto isValidProperty = [&](AcceleratedEffectProperty property) {
         // First, let's assemble the matching values.
         Vector<const AcceleratedEffectValues*> values;
+        bool hasToKeyframe = false;
         for (auto& keyframe : m_keyframes) {
             if (keyframe.animatesProperty(property)) {
                 // If this is the first value we're processing and it's not the
@@ -469,14 +470,19 @@ void AcceleratedEffect::validateFilters(const AcceleratedEffectValues& baseValue
                 if (values.isEmpty() && keyframe.offset())
                     values.append(&baseValues);
                 values.append(&keyframe.values());
-            } else {
-                // If this is the last keyframe we'll be processing and it's not the
-                // keyframe with offset 1, then we need to add the implicit 100% values.
-                if (&keyframe == &m_keyframes.last() && keyframe.offset() == 1)
-                    values.append(&baseValues);
+                hasToKeyframe = hasToKeyframe || keyframe.offset() == 1;
             }
         }
 
+        // At this stage we should have found at least an explicit 0% keyframe
+        // or have added an implicit 0% keyframe.
+        ASSERT(values.size());
+
+        // Add the implicit 100% value if one wasn't provided.
+        if (!hasToKeyframe)
+            values.append(&baseValues);
+
+        // Now we should have at least 0% and 100% values.
         ASSERT(values.size() > 1);
 
         const FilterOperations* longestFilterList = nullptr;
